tests/Rules/Structure/Fixtures/invalid/fieldset_no_legend.html.twig
{# 1 errors #}
<fieldset>
  <div>Content</div>
</fieldset>
